--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <div class="nav-content">
                     <ul class="nav-list" >
                         <li>
-                            <a href="#Sobremi">Proyectos</a>
+                            <a href="#Sobremi" target="_blank" >Proyectos</a>
                         <li>
-                            <a href="#Sobremi">Contacto</a>
+                            <a href="#Sobremi" target="_blank">Contacto</a>
                         </li>
                         
                     </ul>
@@ -51,8 +51,8 @@
                             <p>Si quieres saber más sobre mí y mis proyectos, ¡no dudes en explorar mi portafolio!</p>
                         </div>
                         <div class="icons-description">
-                            <a class="icon-linkedin" href="http://"><i class="fa-brands fa-linkedin"></i> <span>Linkedin</span></a>
-                                <a class="icon-cv"><span>Currículum</span></a> 
+                            <a class="icon-linkedin" href="http://" target="_blank"><i class="fa-brands fa-linkedin"></i> <span>Linkedin</span></a>
+                                <a class="icon-cv"  target="_blank"><span>Currículum</span></a> 
                         </div>
                     </div>
             </div>
@@ -95,10 +95,10 @@
          
             <ul>
                 <li>
-                    <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                 </li>
                 <li>
-                    <a href=""> <i class="fa-brands fa-github"></i></a>
+                    <a href="#" target="_blank"> <i class="fa-brands fa-github"></i></a>
                 </li>
             </ul>
             <span>By Tamara Sosa <i class="fa-solid fa-gamepad"></i></span>
